<resources>
    <string name="app_name">Learn Android</string>
    <string name="android_basics">Android Basics</string>
    <string name="android_os">Android OS</string>
    <string name="activity">Activity</string>
    <string name="fragment">Fragment</string>
    <string name="intent">Intent</string>
    <string name="async_task">AsyncTask</string>
    <string name="topics">Topics</string>
    <string name="about_app">Lorem ipsum dolor sit amet adsfasdfas asdfasf a ads as asd asf asd fasd fa fas as as fas fafasfasdfa asd fas fasd Lorem ipsum dolor sit amet adsfasdfas asdfasf a ads as asd asf asd fasd fa fas as as fas fafasfasdfa asd fas fasd Lorem ipsum dolor sit amet adsfasdfas asdfasf a ads as asd asf asd fasd fa fas as as fas fafasfasdfa asd fas fasd Lorem ipsum dolor sit amet adsfasdfas asdfasf a ads as asd asf asd fasd fa fas as as fas fafasfasdfa asd fas fasd Lorem ipsum dolor sit amet adsfasdfas asdfasf a ads as asd asf asd fasd fa fas as as fas fafasfasdfa asd fas fasd Lorem ipsum dolor sit amet adsfasdfas asdfasf a ads as asd asf asd fasd fa fas as as fas fafasfasdfa asd fas fasd Lorem ipsum dolor sit amet adsfasdfas asdfasf a ads as asd asf asd fasd fa fas as as fas fafasfasdfa asd fas fasd Lorem ipsum dolor sit amet adsfasdfas asdfasf a ads as asd asf asd fasd fa fas as as fas fafasfasdfa asd fas fasd Lorem ipsum dolor sit amet adsfasdfas asdfasf a ads as asd asf asd fasd fa fas as as fas fafasfasdfa asd fas fasd Lorem ipsum dolor sit amet adsfasdfas asdfasf a ads as asd asf asd fasd fa fas as as fas fafasfasdfa asd fas fasd Lorem ipsum dolor sit amet adsfasdfas asdfasf a ads as asd asf asd fasd fa fas as as fas fafasfasdfa asd fas fasd Lorem ipsum dolor sit amet adsfasdfas asdfasf a ads as asd asf asd fasd fa fas as as fas fafasfasdfa asd fas fasd Lorem ipsum dolor sit amet adsfasdfas asdfasf a ads as asd asf asd fasd fa fas as as fas fafasfasdfa asd fas fasd Lorem ipsum dolor sit amet adsfasdfas asdfasf a ads as asd asf asd fasd fa fas as as fas fafasfasdfa asd fas fasd Lorem ipsum dolor sit amet adsfasdfas asdfasf a ads as asd asf asd fasd fa fas as as fas fafasfasdfa asd fas fasd Lorem ipsum dolor sit amet adsfasdfas asdfasf a ads as asd asf asd fasd fa fas as as fas fafasfasdfa asd fas fasd </string>
    <string name="presentation">Presentation</string>
    <string name="android_manifest">Android Manifest</string>
    <string name="navigate_back">Back</string>
    <string name="views_view_groups">Views, View Groups and Layout Managers</string>
    <string name="mark_as_code">Mark as code</string>
    <string name="mark_as_head">Header</string>
    <string name="background">Background</string>
    <string-array name="android_os_array">
        <item>Android OS</item>
        <item>Android Versions</item>
        <item>Android Application</item>
        <item>User Interface</item>
        <item>Context</item>
    </string-array>
    <string-array name="android_manifest_array">
        <item>Configuration of your Android application</item>
        <item>Android manifest example</item>
        <item>Version and package</item>
        <item>Application and components</item>
        <item>Minimum and target SDK</item>
        <item>Permissions</item>
        <item>Required device configuration</item>
        <item>Installation location</item>
    </string-array>
    <string-array name="activity_array">
        <item>States of an activity</item>
        <item>The life cycle methods</item>
        <item>Activity state and ejection from memory</item>
        <item>Navigating between activities</item>
        <item>Saving and Restoring activity state</item>
        <item>Fixing the orientation for an activity</item>
    </string-array>
    <string-array name="fragment_array">
        <item>What are fragments</item>
        <item>Creating a fragment</item>
        <item>Adding a user interface</item>
        <item>Adding a fragment to an activity</item>
        <item>Communicating with the Activity</item>
        <item>Handling the Fragment Lifecycle</item>
    </string-array>
    <string-array name="intent_array">
        <item>What are intents</item>
        <item>Starting activities or services</item>
        <item>Sending out explicit or implicit intents</item>
        <item>Determine valid intent receivers</item>
        <item>Data transfer between activities</item>
        <item>Retrieving result data from a sub-activity</item>>
        <item>Registering for intents via intent filters</item>
    </string-array>
    <string-array name="async_task_array">
        <item>Asynctask Overview</item>
        <item>Defining an AsyncTask</item>
    </string-array>
    <string-array name="views_array">
        <item>View - The widgets in Android</item>
        <item>Using a layout manager</item>
        <item>Layout attributes</item>
        <item>Constraint layout</item>
        <item>FrameLayout</item>
        <item>LinearLayout</item>
        <item>Relative layout</item>
        <item>Grid Layout</item>
        <item>ScrollView</item>
    </string-array>

    <string-array name="background_array">
        <item>Guide to background processing</item>
        <item>Sending operations to multiple threads</item>
        <item>Schedule jobs intelligently</item>
        <item>Services</item>
        <item>Background optimizations</item>
        <item>Broadcasts overview</item>
        <item>Manage device awake state</item>
    </string-array>

    <!--https://developer.android.com/guide/components/services.html-->

</resources>
