<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true">
    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="@dimen/margin_4">

        <android.support.v7.widget.Toolbar android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            >
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>
    <android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_height="match_parent">
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical" android:layout_width="match_parent"
            android:background="@color/white"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/android_basics"
                android:textColor="@color/md_blue_900"
                android:background="@color/bg"
                android:textSize="@dimen/text_dashboard_small"
                android:padding="@dimen/margin_16"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_1"
                android:background="@color/bg" />

            <TextView
                style="@style/headerTextView"
                android:text="@string/android_os"
                />

            <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/androidOSRecyclerView">
            </android.support.v7.widget.RecyclerView>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_1"
                android:background="@color/bg" />

            <TextView
                style="@style/headerTextView"
                android:text="@string/activity"
                />

            <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/activityRecyclerView">
            </android.support.v7.widget.RecyclerView>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_1"
                android:background="@color/bg" />

            <TextView
                style="@style/headerTextView"
                android:text="@string/fragment"/>

            <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/fragmentRecyclerView">
            </android.support.v7.widget.RecyclerView>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_1"
                android:background="@color/bg" />

            <TextView
                style="@style/headerTextView"
                android:text="@string/intent"/>

            <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/intentRecyclerView">
            </android.support.v7.widget.RecyclerView>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_1"
                android:background="@color/bg" />

            <TextView
                style="@style/headerTextView"
                android:text="@string/async_task"/>

            <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/asyncTaskRecyclerView">
            </android.support.v7.widget.RecyclerView>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_1"
                android:background="@color/bg" />

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>

